update the js-background-colorcycle project file

--- a/Js-Background-ColorCycle/css/style.css
+++ b/Js-Background-ColorCycle/css/style.css
@@ -43,7 +43,7 @@ nav ul {
   /* height: 100%; */
 }
 
-#btn-botton {
+#buttons {
   display: flex;
   justify-content: center;
   align-items: center;
