--- a/menu-toggle/css/style.css
+++ b/menu-toggle/css/style.css
@@ -10,18 +10,72 @@ body {
   font-weight: 500;
 }
 
+header {
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+  padding: 0.5rem 6rem;
+}
+
+
+/* Navigation menu List for desktop */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+}
+
+.logo {
+  color: rgb(74, 117, 32);
+}
+
+.menu {
+  display: flex;
+  list-style: none;
+  gap: 30px;
+  line-height: 1.5;
+}
+
+.menu a {
+  font-size: 18px;
+  font-weight: 500;
+  text-decoration: none;
+  position: relative;
+  color: #334;
+}
+
+.menu a::after {
+  content: "";
+  position: absolute;
+  width: 105%;
+  height: 2.5px;
+  border-radius: 4px;
+  background-color: rgb(0, 0, 0);
+  bottom: -3px;
+  left: 0;
+  transform: scale(0);
+  transform-origin: center;
+  transition: 500ms;
+}
+
+.menu a:hover::after {
+  transform: scale(1);
+}
+
+
+
 /* hamburger Menu */
 .hamburger-menu {
-  width: 35px;
+  width: 30px;
   height: 25px;
   display: flex;
   justify-content: center;
   align-items: center;
+  display: none;
 }
 
 .hamburger {
   width: 100%;
-  height: 6px;
+  height: 4px;
   background-color: black;
   border-radius: 6px;
   position: relative;
@@ -33,7 +87,7 @@ body {
   position: absolute;
   background: black;
   width: 100%;
-  height: 6px;
+  height: 4px;
   top: 0;
   left: 0;
   border-radius: 6px;
@@ -41,27 +95,89 @@ body {
 }
 
 .hamburger::before {
-  transform: translateY(-9px);
+  transform: translateY(-8px);
 }
 
 .hamburger::after {
-  transform: translateY(9px);
+  transform: translateY(8px);
 }
 
-.toggle.hamburger {
-  transform: translateX(45px);
-  opacity: 0;
+.toggle .hamburger {
+  background: transparent;
 }
 
-.toggle.hamburger::before {
-  transform: rotate(-45deg);
+.toggle .hamburger::before {
+  transform: rotate(45deg);
   transform: translateX(35px, 35px);
 }
 
-.toggle.hamburger::after {
-  transform: rotate(45deg);
+.toggle .hamburger::after {
+  transform: rotate(-45deg);
   transform: translateX(35px, -35px);
 }
+
+/* Navigation menu List for tablet */
+@media screen and (max-width: 834px) {
+  header {
+    width: 100%;
+    padding: 0px;
+    position: relative;
+  }
+
+  .hamburger-menu {
+    display: block;
+  }
+
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .logo {
+    z-index: -1;
+    margin: 10px 16px;
+    height: 25px;
+  }
+
+  .hamburger-menu {
+    margin: 25px 16px;
+    display: block;
+  }
+
+  .navbar {
+    display: flex;
+    height: 80px;
+    justify-content: space-between;
+  }
+
+  .menu {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+    background-color: grey;
+    height: 360px;
+    width: 100%;
+    transition: 800ms;
+    z-index: -1;
+    position: absolute;
+  }
+
+  .hidden {
+    transform: translateY(-560px);
+  }
+
+  .menu li {
+    margin-top: 20px;
+  }
+
+  .menu a {
+    font-size: 25px;
+    text-decoration: none;
+  }
+}
+
 
 /* Navigation menu List for Mobile*/
 @media screen and (max-width: 428px) {
@@ -72,8 +188,9 @@ body {
   }
 
   .hamburger-menu {
-    margin: 16px;
+    margin: 25px 16px;
   }
+
   .navbar {
     display: flex;
     height: 80px;
@@ -81,16 +198,14 @@ body {
   }
 
   .logo {
-    /* display: ; */
-    position: absolute;
     z-index: -1;
     margin: 20px 16px;
+    visibility: hidden;
   }
 
   .menu {
     list-style: none;
     display: flex;
-
     align-items: center;
     flex-direction: column;
     gap: 30px;
@@ -101,7 +216,7 @@ body {
   }
 
   .hidden {
-    transform: translateX(-340px);
+    transform: translateX(-390px);
   }
 
   .menu li {
@@ -112,4 +227,4 @@ body {
     font-size: 25px;
     text-decoration: none;
   }
-}
+} 
